--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "type": "symfony-bundle",
     "require": {
         "php": "^8.0",
-        "symfony/framework-bundle": "^5.4 || ^6.0",
+        "symfony/framework-bundle": "^5.4 || ^6.0 || ^7.0",
         "twig/twig": "^3.0"
     },
     "autoload": {
